test(mcp): qualify native access with child JaCoCo